profilelist1exp/unpackaged/objects/Attendees__c.object
<CustomObject>
    <description>BOLT &amp; GSL project</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agenda_Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agenda Topic</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Agenda_Topic__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Agenda Topic</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agenda_Topic__c</referenceTo>
        <relationshipLabel>Attending Topic Experts</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <label>Attendee Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attending_From__c</fullName>
        <label>Attending From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dell site</fullName>
                    <default>true</default>
                    <label>Dell site</label>
                </value>
                <value>
                    <fullName>Customer location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Vendor company</description>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Engagement__c</fullName>
        <label>Customer Engagement</label>
        <referenceTo>Customer_Engagement__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dell_Internal_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dell Internal Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dell_Attendee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Display_Attendee_Title_As__c</fullName>
        <label>Display Attendee Title As</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Presenter_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presenter Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role/Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Email_To_Presenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Email To Presenter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic Expert ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Topic_Experts__c.InActive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Topic_Experts__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attendees</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATD{0000000000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <recordTypes>
        <fullName>Account_Team</fullName>
        <active>true</active>
        <description>Select this for creating an account team attendee</description>
        <label>Account Team</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <description>Select this for creating a customer attendee</description>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dell_Internal</fullName>
        <active>true</active>
        <description>Select this for creating a Dell internal attendee</description>
        <label>Dell Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Topic_Expert</fullName>
        <active>true</active>
        <description>Select this for creating an Topic Expert attendee</description>
        <label>Topic Expert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Partner</fullName>
        <active>true</active>
        <description>Vendor/Partner Attendee</description>
        <label>Vendor/Partner</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>